# EmoCam

./: .gitignore  README.md  gruntfile.js  package.json  server.js
app/: routes.js
app/models/: vid-note.js
emotionalRecognition/FacialEmotionRecognition/: CMakeLists.txt  CMakeLists.txt~
emotionalRecognition/FacialEmotionRecognition/src/: emoRecognizer.cpp  main.cpp  preprocessor.cpp
emotionalRecognition/facialEmoTraining/: CMakeLists.txt
emotionalRecognition/facialEmoTraining/src/: CMakeLists.txt  facepreprocesser.cpp  facepreprocesser.h  facetrainer.cpp  facetrainer.h  main.cpp
iOS/: Podfile  model3.xml
iOS/StacheCam/: Face.h  Face.m  Frame.h  Frame.m  MovieRecorder.m  StacheCamAppDelegate.m  StacheCamViewController+AVFFaceDetection.m  StacheCamViewController+CIFaceDetection.h  StacheCamViewController+CIFaceDetection.mm  StacheCamViewController.h  StacheCamViewController.m  UserDefaults.m  emoRecognizer.cpp  emoRecognizer.h  preprocessor.cpp  preprocessor.h
iOS/StacheCam.xcodeproj/: project.pbxproj
iOS/StacheCam.xcworkspace/: contents.xcworkspacedata
iOS/StacheCam.xcworkspace/xcshareddata/: StacheCam.xccheckout
iOS/StacheCam/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
public/css/: main.css  main.scss
public/html/: index.html
public/js/: app.js  controllers.js  services.js
routes/: vid-notes.js
webapp/: bower.json  config-evernote.json  data.json  gruntfile.js  package.json  server.js
webapp/config/: db.js
webapp/public/css/: main.css  main.scss
webapp/routes/: parser.js  vid-notes.js
(+14 files in other folders)
